cabal-version: 3.4
name: spaceballs
version: 0.1.0

library
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    GADTs
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    PatternSynonyms
    QuantifiedConstraints
    ViewPatterns
  default-language: GHC2021
  build-depends:
    base ^>= 4.16 || ^>= 4.17 || ^>= 4.18,
    base64 ^>= 0.4.2,
    bytestring ^>= 0.11.3 || ^>= 0.12.0,
    case-insensitive ^>= 1.2.1,
    containers ^>= 0.6.7,
    http-types ^>= 0.12.3,
    primitive ^>= 0.8.0,
    random ^>= 1.2.1,
    text ^>= 1.2.5 || ^>= 2.0 || ^>= 2.1,
    wai ^>= 3.2.3,
  exposed-modules:
    Spaceballs
  hs-source-dirs: src
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
